# lang-bench

./: .dockerignore  .gitignore  .travis.yml  Makefile  README.md  dune  lang-bench.opam
bench_cli/: cli.ml  dune
bench_lib/: accumulator.ml  accumulator.mli  benchmark.ml  benchmark.mli  config.ml  config.mli  docker.ml  docker.mli  dune  output.ml  output.mli  runner.ml  runner.mli  timing.ml  timing.mli  util.ml  util.mli
ci/: Dockerfile
lua_basic_prime/: primes.lua
primes/bash/: Dockerfile  compute.bash
primes/go/: Dockerfile  go.mod  primes.go
primes/lua/: Dockerfile  compute.lua  lua-alpine.dockerfile  lua-debian.dockerfile  luajit-alpine.dockerfile  luajit-debian.dockerfile
primes/lua-jit/: Dockerfile  compute.lua
primes/lua53/: Dockerfile
primes/nodejs/: Dockerfile  compute.js
primes/ocaml/: Dockerfile  compute.ml
primes/ruby/: Dockerfile  compute.rb
primes/rust/: .dockerignore  Dockerfile
primes/rust/primes/: Cargo.toml
primes/rust/primes/src/: main.rs
primes/zsh/: Dockerfile  compute.zsh
test/: docker.ml  dune  timing.ml
